# raytracer-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: generate.rs  hittree.rs  lib.rs  main.rs  render.rs
src/common/: errors.rs  file.rs  input.rs  mod.rs  progress.rs
src/ecs/: mod.rs  spec.rs  system.rs
src/hitlist/: hitlist.rs  hitlist_old.rs  mod.rs
src/math/: aabb.rs  camera.rs  colour.rs  mod.rs  ray.rs  utils.rs  vec3.rs
src/render/: frame.rs  generator.rs  image.rs  iter.rs  mod.rs  spec.rs
src/render/backends/: cpu.rs  mod.rs  multi.rs  single.rs
src/render/multi/: mod.rs  renderer.rs
src/render/single/: mod.rs  renderer.rs
src/specifications/: features.rs  mod.rs  objects.rs  scene.rs
src/specifications/animations/: mod.rs  vertical.rs
src/specifications/materials/: dielectric.rs  diffuse.rs  lambertian.rs  metal.rs  mod.rs  partial_dielectric.rs  simple.rs  spec.rs
src/specifications/objects/: group.rs  hitrecord.rs  mod.rs  model.rs  plane.rs  spec.rs  sphere.rs  utils.rs
src/specifications/textures/: checker.rs  image.rs  mod.rs
tests/scenes/: air_bubble.json  bouncy_sphere.json  checkers.json  distance_camera.json  distance_camera_blurry.json  distance_camera_nearby.json  earth.json  earthy_sphere.json  first_dielectric.json  first_diffuse.json  first_diffuse.yml  first_metal.json  fuzzy_metal.json  hollow_glass_sphere.json  lonely_sphere.json  lonely_sphere.yml  quads.json  sphere_with_ground_sphere.json  sphere_with_ground_sphere.yml  test.yml  transparent_sphere.json  transparent_sphere.yml  vertices.json
