[package]
name = "raytracer"
version = "0.2.0"
edition = "2021"
authors = [ "Lut99" ]
description = "A new attempt at writing a simple raytracer. This time, no fumbling about with real-time stuff, but instead creating a good-old, offline renderer. Based on <https://raytracing.github.io/books/RayTracingInOneWeekend.html>."


[dependencies]
atty       = "0.2"
clap       = { version = "4.2", features = ["derive"] }
console    = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
humanlog   = { git = "https://github.com/Lut99/humanlog-rs" }
image      = "0.24"
log        = "0.4"
num-traits = "0.2"
rand       = "0.8"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
