[package]
name = "raytracer"
version = "0.3.0"
edition = "2021"
authors = [ "Lut99" ]
description = "A new attempt at writing a simple raytracer. This time, no fumbling about with real-time stuff, but instead creating a good-old, offline renderer. Based on <https://raytracing.github.io/books/RayTracingInOneWeekend.html>."


[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.0"
error-trace = "4.0.0"
fastrand = "2.4.0"
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
image = "0.25.0"
indicatif = "0.18.0"
log = "0.4.0"
parking_lot = "0.12.0"
paste = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
thiserror = "2.0.0"


[features]
default = []
